moved non-authenticated vCenter hosts content to a new section for easier rearranging, added link to vmware docs

--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -59,6 +59,8 @@ To use a VMware vCenter provider, add it to the appliance and authenticate its h
 :leveloffset: 3
 include::Adding_a_VMware_vCenter_Provider.adoc[]
 
+:leveloffset: 4
+include::Nonadmin_VMware_vCenter_Auth.adoc[]
 
 :leveloffset: 3
 include::Authenticating_VMware_vCenter_Hosts.adoc[]
