--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-cloudformation-template-service-provisioning.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-cloudformation-template-service-provisioning.adoc
@@ -3,7 +3,7 @@
 [[example-cloudformation-provisioning-via-services]]
 == Example: Using Amazon CloudFormation Template for Service Provisioning
 
-{product-title_short} supports Amazon CloudFormation orchestration templates that make deploying complex services easier in the cloud.
+Cloud orchestration is a service that allows you to create, update, and manage cloud resources and their software components as a single unit and then deploy them in an automated, repeatable way through a template. The deployed instances and associated collection of resources are referred to as stack. {product-title_short} supports Amazon CloudFormation orchestration templates that make deploying complex services easier in the cloud.
 
 [[example-adding-orchestration-template]]
 ==== Creating an Orchestration Template
@@ -18,7 +18,7 @@ Complete the following procedure to add new orchestration templates.
 . Add your template in the area below for the selected *Template Type*. You can author your own stack template, or you can copy and paste from an existing text file.
 . Click *Add*.
 
-You can add this template as a catalog item to a service catalog. Stacks can then be created from templates and launched from the service catalog.
+You can add this template as a catalog item to a service catalog. Stacks can then be created from templates and launched from the service catalog using a service dialog.
 
 [[example-adding-service-dialog-from-orchestration-template]]
 === Creating a Service Dialog from an Orchestration Template
