--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-creating-a-service-for-provisioning-vm.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-creating-a-service-for-provisioning-vm.adoc
@@ -97,7 +97,7 @@ The following procedure outlines how to create a service dialog for your sample 
 .. Click the image:1851.png[pencil]icon next to the element to edit its field details.
 .. Enter `VM Memory` in *Label*.
 .. Enter `option_0_vm_memory` in *Name*.
-.. Click *Options. Next to *Entries*, click + to add individual entries for the values `1024`, `2048`, and `4096` and their description.
+.. Click *Options*. Next to *Entries*, click + to add individual entries for the values `1024`, `2048`, and `4096` and their description.
 .. Click *Save*.
 . Click *Save* to save the dialog.
 
@@ -140,15 +140,12 @@ The last step in creating a service is to create a catalog item to represent tha
 .. In the Network tab, select *rhevm* from the *vLan* list.
 . Click *Add*.
 
-
 [NOTE]
 ====
 In {product-title_short}, service catalog items can be more complex than a single virtual machine and are provisioned through a series of automation workflows. The service dialog you created will be used to gather information from the customer, hiding all the complexity of the details needed to actually deploy any of the components.
 ====
 
-.Summary
-
-As part of the above sample service, you created a provisioning dialog that defines the options that can be set on a virtual machine and you created a service dialog which allows us to expose certain options to be set by the user. For our example, the service name, virtual machine name, virtual machine description, and virtual machine characteristics are configurable. Then, you created a service catalog and finally a catalog item. The catalog item combines the service dialog with all of the options in the provisioning dialog. You can now provision a virtual machine through Red Hat Virtualization using the Service User Interface (SUI). 
+You can now provision a virtual machine through Red Hat Virtualization using the Service User Interface (SUI).
 
 [[provision-vm-using-sui]]
 === Provisioning a Virtual Machine Using the Service User Interface (SUI)
@@ -162,8 +159,11 @@ As part of the above sample service, you created a provisioning dialog that defi
 .. Enter the virtual machine description in *VM Description*.
 . In *VM Characteristics*, enter *Number of CPUs* and *VM Memory*.
 . Click *Add to Shopping Cart* and access the shopping cart by clicking its icon on the upper-right corner of the screen.
-. Click *Order*. You have ordered a new provisioning request. You can follow the progress and see other details of your order request by selecting it from the *Orders* tab.
+. Click *Order*. You have ordered a new provisioning request. You can follow its progress and see additional details of the order request by selecting it from the *Orders* tab.
 
 See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/introduction_to_the_self_service_user_interface/[Introduction to the Self Service User Interface] for more information about using the Service user interface.
 
 
+.Summary
+
+As part of the above sample service, you created a provisioning dialog that defines the options that can be set on a virtual machine and you created a service dialog which allows us to expose certain options to be set by the user. For our example, the service name, virtual machine name, virtual machine description, and virtual machine characteristics are configurable. Then, you created a service catalog and finally a catalog item. The catalog item combines the service dialog with all of the options in the provisioning dialog. Lastly, you provisioned a Red Hat Virtualization virtual machine using the Service User Interface (SUI).
