--- a/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
@@ -30,6 +30,8 @@ include::topics/Alert_Profiles.adoc[]
 
 include::topics/Importing_and_Exporting.adoc[]
 
+include::topics/Integrating_Prometheus_Alerts.adoc[]
+
 include::topics/RSS.adoc[]
 
 include::topics/appe-Regular_Expressions.adoc[]
