--- a/doc-Scripting_Actions/topics/expression_method.adoc
+++ b/doc-Scripting_Actions/topics/expression_method.adoc
@@ -2,7 +2,7 @@
 
 ==== Creating an Expression Method
 
-{product-title} provides support for expression methods. Expression methods allow you to use advance search filters as automate methods, substituting user input at runtime, and making them ideal for dynamic dialogs. 
+Expression methods allow you to use advance search filters as automate methods, substituting user input at runtime, and making them ideal for dynamic dialogs. 
 
 
 To create an expression method:
@@ -23,4 +23,13 @@ image:../images/1862.png[image] (*Add a New Method*).
 .. Click image:2366.png[image] to add a new parameter.
 .. Provide a *Name*, *Default Value* and select a *Data Type* for each parameter. 
 .. Click image:1863.png[image] to add the parameter.
++
+[NOTE]
+====
+If *User will input the value* is checked, arguments for each input parameter names using the prefix “arg”.
+
+For example, if there are 3 fields then the input parameter names should be arg1, arg2, and arg3.
+If there are two runtime parameters arg1 and arg2 must be defined in the input parameters. In the default value for these fields values can be substituted from other objects in the Automate Workspace.
+====
++
 . Click *Add*. 
