api v3.0.0 - Support Configuration Script Payload subcollection

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -71,7 +71,7 @@ set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
 Add cloud subnet REST API
 Add paging links to the API https://github.com/ManageIQ/manageiq/pull/15148
 Add support for Cloud Volume Delete action https://github.com/ManageIQ/manageiq/pull/15097
-configuration_script_sources subcollection https://github.com/ManageIQ/manageiq/pull/15070
+Support Configuration Script Payload subcollection,
 Removed Blueprint support,
 Return hrefs on create,
 Enable custom actions for several collections,
