--- a/api/reference/configuration_script_sources.adoc
+++ b/api/reference/configuration_script_sources.adoc
@@ -32,6 +32,19 @@ Getting details on a specific configuration script source:
 GET /api/configuration_script_sources/:id
 ----
 
+Querying configuration script payloads of a particular configuration script source:
+
+----
+GET /api/configuration_script_sources/:id/configuration_script_payloads?expand=resources
+----
+
+Querying the configuration script payloads of a particular configuration script
+source that belong to a specific region:
+
+----
+GET /api/configuration_script_sources/:id/configuration_script_payloads?expand=resources&filter[]=region_number=10
+----
+
 [[creating-configuration-script-sources]]
 === Creating Configuration Script Sources
 
