--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -70,7 +70,7 @@ Remove miq_server https://github.com/ManageIQ/manageiq/pull/15284
 set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
 Add cloud subnet REST API
 Add paging links to the API https://github.com/ManageIQ/manageiq/pull/15148
-Add support for Cloud Volume Delete action https://github.com/ManageIQ/manageiq/pull/15097
+Delete Cloud Volumes,
 Support Configuration Script Payload subcollection,
 Removed Blueprint support,
 Return hrefs on create,
