api v3.0.0 - Enabled paging by default

--- a/api/overview/query.adoc
+++ b/api/overview/query.adoc
@@ -21,6 +21,7 @@ GET /api/:collection?attr1=val1&attr2=val2&...
 |Paging | |
 | |offset |0-based offset of first item to return
 | |limit |number of items to return. If 0 is specified then the remaining items are returned
+| 2+| Please refer to link:../overview/paging.html[Paging] for details on default paging and paging links provided by the API
 |Scope | |
 | |filter[] |One or more filters
 to search on. See <<filtering,Filtering>> below.
