--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -27,7 +27,6 @@ Allow update to request task as a subcollection of request https://github.com/Ma
 Allow generic object definition picture to be removed via edit https://github.com/ManageIQ/manageiq-api/pull/116
 Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
 Picture support for Generic Object Definitions 
-Paginate all the things https://github.com/ManageIQ/manageiq-api/pull/113
 Remove equired filters from event streams https://github.com/ManageIQ/manageiq-api/pull/112
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
@@ -68,8 +67,8 @@ Network Routers https://github.com/ManageIQ/manageiq/pull/15450
 Redirect tasks subcollection to request_tasks https://github.com/ManageIQ/manageiq/pull/15357
 Remove miq_server https://github.com/ManageIQ/manageiq/pull/15284
 set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
-Add cloud subnet REST API
-Add paging links to the API https://github.com/ManageIQ/manageiq/pull/15148
+Add cloud subnet REST API,
+Enabled paging by default,
 Delete Cloud Volumes,
 Support Configuration Script Payload subcollection,
 Removed Blueprint support,
