update with reviewer feedback

--- a/doc-Scripting_Actions/topics/Ansible_method.adoc
+++ b/doc-Scripting_Actions/topics/Ansible_method.adoc
@@ -28,7 +28,7 @@ image:../images/1862.png[image] (*Add a New Method*).
 . Select when to receive *Logging Output* from the options in the drop-down menu. 
 . Use the *Escalate Privilege* toggle switch to enable user privilege escalation if credentials are called for during the playbook run. 
 . Choose a *Verbosity* value to set the debug level for playbook execution.
-. Add required *Input Parameters* using the fields and values available. Click the image:2366.png[] to add additional input parameters.
+. Add required *Input Parameters* using the fields and values available. Click the image:add_parameter.png[] to add additional input parameters.
 +
 [NOTE]
 ====
