api v3.0.0 - Adding Cloud Subnets

--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -28,6 +28,7 @@ Where :collection is one of the following:
 |categories | Categories
 |chargebacks | Chargebacks
 |cloud_networks | Cloud Networks
+|cloud_subnets | Cloud Subnets
 |cloud_volumes | Cloud Volumes
 |clusters | Clusters
 |conditions | Conditions
