--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -66,6 +66,28 @@ Or expanding the Cloud Networks in addition to the provider as follows:
 GET /api/providers/:id?expand=cloud_networks
 ----
 
+[[cloud-subnets]]
+==== Cloud Subnets
+
+The Cloud Subnets of a provider can be queried by asking for the _cloud_subnets_ subcollection as follows:
+
+[source,data]
+----
+GET /api/providers/:id/cloud_subnets
+----
+
+[source,data]
+----
+GET /api/providers/:id/cloud_subnets/:cloud_subnet_id
+----
+
+Or expanding the Cloud Subnets in addition to the provider as follows:
+
+[source,data]
+----
+GET /api/providers/:id?expand=cloud_subnets
+----
+
 [[load-balancers]]
 ==== Load Balancers
 
