--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -67,7 +67,7 @@ Network Routers https://github.com/ManageIQ/manageiq/pull/15450
 Redirect tasks subcollection to request_tasks https://github.com/ManageIQ/manageiq/pull/15357
 Remove miq_server https://github.com/ManageIQ/manageiq/pull/15284
 set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
-Add cloud subnet REST API,
+Querying Cloud Subnets,
 Enabled paging by default,
 Delete Cloud Volumes,
 Support Configuration Script Payload subcollection,
