api v3.0.0 - Support set_miq_server on VMs

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -65,8 +65,7 @@ Make namespace into a virtual attribute https://github.com/ManageIQ/manageiq/pul
 Floating IPs https://github.com/ManageIQ/manageiq/pull/15524
 Network Routers https://github.com/ManageIQ/manageiq/pull/15450
 Redirect tasks subcollection to request_tasks https://github.com/ManageIQ/manageiq/pull/15357
-Remove miq_server https://github.com/ManageIQ/manageiq/pull/15284
-set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
+Support set_miq_server action on VMs,
 Querying Cloud Subnets,
 Enabled paging by default,
 Delete Cloud Volumes,
