api v3.0.0 - avoid tasks alias for request_tasks, recommend just the expand=request_tasks

--- a/api/examples/queries.adoc
+++ b/api/examples/queries.adoc
@@ -85,6 +85,6 @@ GET /api/service_templates/25/service_requests?expand=resources,request_tasks
 === Get a specific provision request with expanded details on the associated provision request tasks
 
 ----
-GET /api/provision_requests/120?expand=tasks
+GET /api/provision_requests/120?expand=request_tasks
 ----
 
