--- a/api/reference/services.adoc
+++ b/api/reference/services.adoc
@@ -754,16 +754,10 @@ monitored as follows:
 GET /api/service_requests/:id
 ----
 
-Additionally, tasks of the specific requests can be queried:
+Additionally, request tasks of the specific requests can be queried:
 
 ----
 GET /api/service_requests/:id?expand=request_tasks
-----
-
-or optionally via the tasks alias:
-
-----
-GET /api/service_requests/:id?expand=tasks
 ----
 
 [[approving-denying-service-requests]]
