api v3.0.0 - Query and Delete Network Routers

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -63,7 +63,7 @@ rollups_in_range method https://github.com/ManageIQ/manageiq/pull/15549
 Allow operator characters on the RHS of filter https://github.com/ManageIQ/manageiq/pull/15534
 Make namespace into a virtual attribute https://github.com/ManageIQ/manageiq/pull/15532
 Floating IPs https://github.com/ManageIQ/manageiq/pull/15524
-Network Routers https://github.com/ManageIQ/manageiq/pull/15450
+Query and Delete Network Routers,
 Support set_miq_server action on VMs,
 Querying Cloud Subnets,
 Enabled paging by default,
