--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -45,6 +45,7 @@ Where :collection is one of the following:
 |instances | Instances
 |load_balancers | Load Balancers
 |measures | Measures
+|network_routers | Network Routers
 |notifications | User's past notifications
 |orchestration_templates | Orchestration Template
 |pictures | Pictures
