api v3.0.0 - Querying Floating IPs

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -62,7 +62,7 @@ Query by multiple tags https://github.com/ManageIQ/manageiq/pull/15557
 rollups_in_range method https://github.com/ManageIQ/manageiq/pull/15549
 Allow operator characters on the RHS of filter https://github.com/ManageIQ/manageiq/pull/15534
 Make namespace into a virtual attribute https://github.com/ManageIQ/manageiq/pull/15532
-Floating IPs https://github.com/ManageIQ/manageiq/pull/15524
+Querying Floating IPs,
 Query and Delete Network Routers,
 Support set_miq_server action on VMs,
 Querying Cloud Subnets,
