--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -40,6 +40,7 @@ Where :collection is one of the following:
 |events | Events
 |features | Product Features
 |flavors | Flavors
+|floating_ips | Floating IPs
 |groups | Groups
 |hosts | Hosts
 |instances | Instances
