--- a/api/reference/categories_tags.adoc
+++ b/api/reference/categories_tags.adoc
@@ -36,7 +36,7 @@ GET /api/categories
 Or getting attributes of interest:
 
 ----
-GET /api/categories?expand=resources&attributes=name,description
+GET /api/categories?expand=resources&attributes=ns,name,description
 ----
 
 [[querying-tags]]
