--- a/doc-General_Configuration/topics/RH_Insights.adoc
+++ b/doc-General_Configuration/topics/RH_Insights.adoc
@@ -2,7 +2,7 @@
 [[rh-insights]]
 == Red Hat Insights
 
-*Red Hat Insights* is a service that uses the collective knowledge to help end users proactively diagnose systems and avoid critical downtime situations. Red Hat Insights does this by having systems periodically check in similar to Red Hat Subscription Management.
+*Red Hat Insights* is a service that uses the collective knowledge of Red Hat Certified Engineers to help end users proactively diagnose systems and avoid critical downtime situations. Red Hat Insights does this by having systems periodically check in similar to Red Hat Subscription Management.
 
 Red Hat Insights provides an easy to use dashboard that enables system administrators and IT operations managers to quickly identify key risks to stability, security, or performance. A glance at the display allows users to sort by category, view details of the impact and resolution, and then quickly determine what systems are affected.
 
@@ -27,9 +27,10 @@ Advantages of Red Hat Insights:
 
 The Red Hat Insights plugin has the following options:
 
+* Actions
 * Overview
 * Rules
-* Systems
+* Inventory
 
 The following sections describe each of these tabs in more detail.
 
@@ -45,8 +46,15 @@ The Overview tab helps you discover the issues within your deployment. It differ
 
 You can select each of these categories to view more details on the issues.
 
-image::RH-access-insights-overview.png[]
+[[rh-insights-actions]]
+=== Actions Tab
 
+The Actions tab offers a quick visual indication of the number of vulnerabilities associated with your systems, as well as the category and severity risks. A Featured Topics section provides detailed overviews of associated risks facing a system, as well as actions to take to resolve the issue.  
+
+
+==== Actions Detail
+
+Users can click on a issue type in the Actions tab to view a detailed list off systems at risk, as well as view a list of rules applicable to each vulnerable system. 
 
 [[rh-insights-rules]]
 === Rules Tab
@@ -78,12 +86,10 @@ You will find the following information available for each rule on the list
 * *Severity* - Warn, Error, Info.
 * *Count* - The current amount of hosts the plugin has been detected by when the rules last ran.
 
-image::RH-access-insights-rules.png[]
 
 [[rh-insights-systems]]
-=== Systems Tab
+=== Inventory Tab
 
-The Systems tab helps you discover the issues within your system. This tab lists the hostname of the system, the time of last check in and the status. You can filter the list by using image:RH-access-insights-action.png[image] (*Actions*) for all systems that require actions and image:RH-access-insights-no-action.png[image] (*No Actions*) for all systems that are working without issues and require no actions. You can also filter the list using the  *Groups* dropdown list.
+The Inventory tab helps you discover the issues within your system. This tab lists the hostname of the system, the time of last check in and the status. You can filter the list by using image:RH-access-insights-action.png[image] (*Actions*) for all systems that require actions and image:RH-access-insights-no-action.png[image] (*No Actions*) for all systems that are working without issues and require no actions. You can also filter the list using the  *Groups* dropdown list.
 
-image::RH-access-insights-systems.png[]
 
