api v3.0.0 - Querying by multiple tags

--- a/api/appendices/quick_reference.adoc
+++ b/api/appendices/quick_reference.adoc
@@ -48,6 +48,7 @@ of the REST API.
 | | Can sort by database columns and SQL friendly virtual attributes
 |Filtering |filter[]=...
 |Querying by Tag |i.e. by_tag=/department/finance
+|Querying by Multiple Tags |i.e. by_tag=/department/finance,/department/engineering
 |Expanding Results |expand=<what>, i.e.  expand=resources,tags,service_templates,...
 |Selecting Attributes |attributes=<attr1>,<attr2>,... i.e.  attributes=id,name,type,...
 | |Attributes can be:
