--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -55,7 +55,7 @@ Flavors create and delete https://github.com/ManageIQ/manageiq-api/pull/14
 Additional power operations https://github.com/ManageIQ/manageiq-api/pull/11
 Add guest_devices support https://github.com/ManageIQ/manageiq-api/pull/7
 Metrics rollups API https://github.com/ManageIQ/manageiq-api/pull/4
-Query by multiple tags https://github.com/ManageIQ/manageiq/pull/15557
+Querying by multiple tags,
 Querying Floating IPs,
 Query and Delete Network Routers,
 Support set_miq_server action on VMs,
