--- a/api/examples/queries.adoc
+++ b/api/examples/queries.adoc
@@ -60,6 +60,13 @@ GET /api/vms?offset=0&limit=1000&filter[]=name='test%'
 GET /api/services?by_tag=/department/finance
 ----
 
+[[query-services-tagged-for-finance-or-engineering-department]]
+=== Query Services tagged with the finance or engineering department
+
+----
+GET /api/services?by_tag=/department/finance,/department/engineering
+----
+
 [[get-details-on-the-tags-of-the-first-service]]
 === Get details on the Tags of the first service
 
