api v3.0.0 - Supporting Metric Rollups

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -46,7 +46,6 @@ OPTIONS for providers https://github.com/ManageIQ/manageiq-api/pull/43
 OPTIONS generic object definition https://github.com/ManageIQ/manageiq-api/pull/42
 support PUT to generic object definitions https://github.com/ManageIQ/manageiq-api/pull/38
 Generic Object Definition Actions https://github.com/ManageIQ/manageiq-api/pull/37
-Metric rollups subcollection https://github.com/ManageIQ/manageiq-api/pull/33
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
@@ -54,7 +53,7 @@ Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
 Flavors create and delete https://github.com/ManageIQ/manageiq-api/pull/14
 Additional power operations https://github.com/ManageIQ/manageiq-api/pull/11
 Add guest_devices support https://github.com/ManageIQ/manageiq-api/pull/7
-Metrics rollups API https://github.com/ManageIQ/manageiq-api/pull/4
+Support Metrics Rollups,
 Querying by multiple tags,
 Querying Floating IPs,
 Query and Delete Network Routers,
