--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -43,12 +43,12 @@ For more information, see [https://access.redhat.com/documentation/en-us/red_hat
 endif::cfme[]
 ====
 
-+=== Roles 
-+
-+Server roles define what a server can do. Assigning different server roles to appliances can allow them to focus on specific functions. When planning a deployment, consider which roles to assign to each appliance. Some server roles are enabled by default in {product-title}.
-+
-+Some roles are also dependent on other roles. For example, when assigning the User Interface role to a server, the Web Services role must also be enabled for users to log in to the appliance. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/general_configuration/configuration#server-roles[Server Roles] in _General Configuration_
-+for details on each server role and its function.
+=== Roles 
+
+Server roles define what a server can do. Assigning different server roles to appliances can allow them to focus on specific functions. When planning a deployment, consider which roles to assign to each appliance. Some server roles are enabled by default in {product-title_short}.
+
+Some roles are also dependent on other roles. For example, because the {product-title_short} user interface relies on the API for access, the Web Services role must be enabled with the User Interface role for users to log in to the appliance. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/general_configuration/configuration#server-roles[Server Roles] in _General Configuration_
+for details on each server role and its function.
 
 
 [[central-administration]]
@@ -242,3 +242,4 @@ You can then get an API token from `appliance1`, and use it to access the API fr
 The shared `memcached` service now runs only on `appliance1`, and any other appliance accesses `memcached` from that appliance. Configure additional appliances with the steps for `appliance2`.
 
 
+{product-title_short}
