fixed typo in web services role entry

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -588,7 +588,7 @@ These roles are enabled by default on all servers.
 |SmartProxy|Enabling the SmartProxy role turns on the embedded SmartProxy on the {product-title_short} server. The embedded SmartProxy can analyze virtual machines that are registered to a host and templates that are associated with a provider. To provide visibility to repositories, install the SmartProxy on a host from the {product-title_short} console. This SmartProxy can also analyze virtual machines on the host on which it is installed. Enabling the SmartProxy role on an appliance requires selecting the SmartProxy Affinity for a zone to run a SmartState Analysis. By default, no selections are enabled under SmartProxy Affinity.|Zone|Active/Active
 |SmartState Analysis|This role is enabled by default. The SmartState Analysis role controls which {product-title_short} servers can control SmartState Analyses and process the data from the analysis. You should have at least one of these in each zone.|Zone|Active/Active
 |User Interface|This role is enabled by default. The Web Services role must also be enabled with this role to log into the user interface, as the User Interface role queries the API to receive tokens for login. Uncheck User Interface if you do not want users to be able to access this {product-title_short} server using the {product-title_short} console. For example, you may want to turn this off if the {product-title_short} server is strictly being used for capacity and utilization or reporting generation. More than one {product-title_short} server can have this role in a zone.|Zone|Active/Active
-Web Services|This role is enabled by default. The Web Services roles provides API access and must be enabled if the User Interface role is enabled to log into the user interface. You can also enable the Web Services role to provide API-only access to the server. Uncheck Web Services to stop this {product-title_short} server from acting as a web service provider. More than one {product-title_short} server can have this role in a zone.|N/A|Active/Active
+|Web Services|This role is enabled by default. The Web Services role provides API access and must be enabled if the User Interface role is enabled to log into the user interface. You can also enable the Web Services role to provide API-only access to the server. Uncheck Web Services to stop this {product-title_short} server from acting as a web service provider. More than one {product-title_short} server can have this role in a zone.|N/A|Active/Active
 |Websocket|This role enables starting or stopping websocket workers required for proxying remote consoles.|N/A|Active/Active
 |=======================================================================
 
