--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -39,7 +39,7 @@ The region also uses a region database that reports to a master database on the 
 ====
 {product-title_short} can be configured in a highly available setup. In this case, all PostgreSQL instances must be running on a server that is deployed from the {product-title_short} appliance. High availability is achieved by database replication between two or more database servers.
 ifdef::cfme[]
-For more information, see [https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/single/configuring_high_availability/index[Configuring High Availability]. 
+For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/single/configuring_high_availability/index[Configuring High Availability]. 
 endif::cfme[]
 ====
 
