Minor peer review edit

--- a/doc-Scripting_Actions/topics/Expression_method_overview.adoc
+++ b/doc-Scripting_Actions/topics/Expression_method_overview.adoc
@@ -1,7 +1,7 @@
 [[expression-methods-overview]]
 === Expression Methods 
 
-{product-title_short} additionally provides support for Expression Methods, that allow you to use advance search filters as Automate Methods, substituting the user input from Automate Objects. Expression methods have several distinct advantages, including: running directly in the worker appliance, removing the overhead of forking a DRb process to run the Automate Methods; no Ruby code required; and prebuilt for Dynamic Dialogs. 
+{product-title_short} additionally provides support for Expression Methods, that allow you to use advance search filters as Automate Methods, substituting the user input from Automate Objects. Expression methods have several distinct advantages, including: running directly in the worker appliance; removing the overhead of forking a DRb process to run the Automate Methods; no Ruby code required; and prebuilt for Dynamic Dialogs. 
 
 ==== Input Parameters
 
