api v3.0.0 - Support Guest Devices

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -52,7 +52,7 @@ require credentials when creating a provider https://github.com/ManageIQ/managei
 Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
 Flavors create and delete https://github.com/ManageIQ/manageiq-api/pull/14
 Additional power operations https://github.com/ManageIQ/manageiq-api/pull/11
-Add guest_devices support https://github.com/ManageIQ/manageiq-api/pull/7
+Support Guest Devices,
 Support Metrics Rollups,
 Querying by multiple tags,
 Querying Floating IPs,
