--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -42,6 +42,7 @@ Where :collection is one of the following:
 |flavors | Flavors
 |floating_ips | Floating IPs
 |groups | Groups
+|guest_devices | Guest Devices
 |hosts | Hosts
 |instances | Instances
 |load_balancers | Load Balancers
