api v3.0.0 - Management of Physical Servers

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -11,7 +11,6 @@ Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
 Tasks delete support https://github.com/ManageIQ/manageiq-api/pull/220
-physical servers refresh https://github.com/ManageIQ/manageiq-api/pull/189
 container_projects collection https://github.com/ManageIQ/manageiq-api/pull/182
 set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
@@ -51,7 +50,7 @@ calls to fetch and update the Automate Workspace https://github.com/ManageIQ/man
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
 Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
 Flavors create and delete https://github.com/ManageIQ/manageiq-api/pull/14
-Additional power operations https://github.com/ManageIQ/manageiq-api/pull/11
+Management of Physical Servers,
 Support Guest Devices,
 Support Metrics Rollups,
 Querying by multiple tags,
