--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -50,6 +50,7 @@ Where :collection is one of the following:
 |network_routers | Network Routers
 |notifications | User's past notifications
 |orchestration_templates | Orchestration Template
+|physical_servers | Physical Servers
 |pictures | Pictures
 |policies | Policies
 |policy_actions | Actions
