--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -49,7 +49,7 @@ Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-ap
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
 Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
-Flavors create and delete https://github.com/ManageIQ/manageiq-api/pull/14
+Flavor Management,
 Management of Physical Servers,
 Support Guest Devices,
 Support Metrics Rollups,
