api v3.0.0 - Removed Arbitration Profiles, Rules and Settings.

--- a/api/overview/http.adoc
+++ b/api/overview/http.adoc
@@ -122,11 +122,16 @@ returns the following structure:
   },
   "collections": [
     {
-      "name": "arbitration_profiles",
-      "href": "http://localhost:3000/api/arbitration_profiles",
-      "description": "Arbitration Profiles"
+      "name": "actions",
+      "href": "http://localhost:3000/api/actions",
+      "description": "Actions"
     },
     ...
+    {
+      "name": "vms",
+      "href": "http://localhost:3000/api/vms",
+      "description": "Virtual Machines"
+    },
     {
       "name": "zones",
       "href": "http://localhost:3000/api/zones",
