--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -47,6 +47,7 @@ Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-ap
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
 Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
+Removed Arbitration Profiles, Rules and Settings,
 Flavor Management,
 Management of Physical Servers,
 Support Guest Devices,
