api v3.0.0 - Querying Container Projects

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -11,7 +11,6 @@ Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
 Tasks delete support https://github.com/ManageIQ/manageiq-api/pull/220
-container_projects collection https://github.com/ManageIQ/manageiq-api/pull/182
 set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
@@ -47,6 +46,7 @@ Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-ap
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
 Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
+Querying Container Projects,
 Removed Arbitration Profiles, Rules and Settings,
 Flavor Management,
 Management of Physical Servers,
