--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -32,6 +32,7 @@ Where :collection is one of the following:
 |configuration_script_payloads | Configuration Script Payloads
 |configuration_script_sources | Configuration Script Source
 |container_deployments | Container Provider Deployment
+|container_projects | Container Projects
 |currencies | Currencies
 |data_stores | Datastores
 |events | Events
