api v3.0.0 - VMs Subcollection for Providers

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -32,7 +32,6 @@ Generic object method calling https://github.com/ManageIQ/manageiq-api/pull/93
 set custom attributes on services https://github.com/ManageIQ/manageiq-api/pull/85
 Security group subcollection to providers, cloud tenants and vms https://github.com/ManageIQ/manageiq-api/pull/81
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
-VMS subcollection to providers https://github.com/ManageIQ/manageiq-api/pull/66
 Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
 Tags subcollection on generic objects https://github.com/ManageIQ/manageiq-api/pull/64
 Update orchestration template subclasses references https://github.com/ManageIQ/manageiq-api/pull/63
@@ -46,6 +45,7 @@ Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-ap
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
 Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
+VMs Subcollection for Providers,
 Querying Container Projects,
 Removed Arbitration Profiles, Rules and Settings,
 Flavor Management,
