--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -114,6 +114,39 @@ Or expanding the Load Balancers for the specific provider as follows:
 GET /api/providers/:id?expand=load_balancers
 ----
 
+[[vms]]
+==== Virtual Machines
+
+Virtual Machines of providers can be queried via the vms subcollection as follows:
+
+Query all VMs of a provider:
+
+[source,data]
+----
+GET /api/providers/:id/vms
+----
+
+Query a specific VM of a provider:
+
+[source,data]
+----
+GET /api/providers/:id/vms/:vm_id
+----
+
+Or expanding the VMs for the specific provider as follows:
+
+[source,data]
+----
+GET /api/providers/:id?expand=vms
+----
+
+Query specific VMs of a provider and get their name and vendor attributes:
+
+[source,data]
+----
+GET /api/providers/:id/vms?filter[]=name='test*'&attributes=name,vendor&expand=resources
+----
+
 [[creating-providers]]
 === Creating Providers
 
