--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -39,6 +39,8 @@ Where :collection is one of the following:
 |features | Product Features
 |flavors | Flavors
 |floating_ips | Floating IPs
+|generic_object_definitions | Generic Object Definitions
+|generic_objects | Generic Objects
 |groups | Groups
 |guest_devices | Guest Devices
 |hosts | Hosts
