--- a/api/reference/tagging.adoc
+++ b/api/reference/tagging.adoc
@@ -239,6 +239,7 @@ of resources. Tags can be managed as subcollections of the following primary col
 | /api/categories
 | /api/clusters
 | /api/data_stores
+| /api/generic_objects
 | /api/groups
 | /api/hosts
 | /api/providers
