--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -19,32 +19,24 @@ Add security group subcollection actions https://github.com/ManageIQ/manageiq-ap
 Return image_href and extension for pictures https://github.com/ManageIQ/manageiq-api/pull/127
 Return picture href for generic object subcollections https://github.com/ManageIQ/manageiq-api/pull/126
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
-Update task description for generic object methods https://github.com/ManageIQ/manageiq-api/pull/118
 Allow update to request task as a subcollection of request https://github.com/ManageIQ/manageiq-api/pull/117
-Allow generic object definition picture to be removed via edit https://github.com/ManageIQ/manageiq-api/pull/116
 Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
-Picture support for Generic Object Definitions 
 Remove equired filters from event streams https://github.com/ManageIQ/manageiq-api/pull/112
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
-Generic object method calling https://github.com/ManageIQ/manageiq-api/pull/93
 set custom attributes on services https://github.com/ManageIQ/manageiq-api/pull/85
 Security group subcollection to providers, cloud tenants and vms https://github.com/ManageIQ/manageiq-api/pull/81
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
 Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
-Tags subcollection on generic objects https://github.com/ManageIQ/manageiq-api/pull/64
 Update orchestration template subclasses references https://github.com/ManageIQ/manageiq-api/pull/63
 Add/Update/Delete custom attribute for cloud instances https://github.com/ManageIQ/manageiq-api/pull/58
-Generic Objects subcollection https://github.com/ManageIQ/manageiq-api/pull/57
-Generic Objects API https://github.com/ManageIQ/manageiq-api/pull/50
 Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
-support PUT to generic object definitions https://github.com/ManageIQ/manageiq-api/pull/38
-Generic Object Definition Actions https://github.com/ManageIQ/manageiq-api/pull/37
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
 require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
-Generic Object Definition CRUD https://github.com/ManageIQ/manageiq-api/pull/15
+CRUD for Generic Object Definitions,
+CRUD for Generic Objects,
 VMs Subcollection for Providers,
 Querying Container Projects,
 Removed Arbitration Profiles, Rules and Settings,
