Included the updated section on adding a containers provider instead of cross-linking. Also added a missing icon image file.

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -1,9 +1,9 @@
 . Navigate to menu:Compute[Containers > Providers].
-. Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[Add a New Containers Provider] (*Add Existing Containers Provider*).
+. Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[Add a New Containers Provider] (*Add a New Containers Provider*).
 . Enter a *Name* for the provider.
 . From the *Type* list, select *OpenShift Container Platform*.
 . Enter the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`.
-. From the *Alerts* list, select *Prometheus* to enable external alerts, or leave as *Disabled*. Selecting *Prometheus* adds an *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
+. From the *Alerts* list, select *Prometheus* to enable external alerts. Selecting *Prometheus* adds an *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
 . From the *Metrics* list, select *Hawkular* or *Prometheus* to collect capacity and utilization data, or leave as *Disabled*. Selecting *Prometheus* or *Hawkular* adds a *Metrics* tab to the lower pane for further configuration. Metrics are disabled by default.
 . In the *Default* tab, configure the following for the OpenShift provider: 
 .. Select a *Security Protocol* method to specify how to authenticate the provider:
@@ -36,7 +36,7 @@ For example:
 ====
 +
 .. Click *Validate* to confirm that {product-title} can connect to the OpenShift Container Platform provider.
-. If you selected a metrics service, configure the service's details in the *Metrics* tab:
+. If you selected a metrics service, configure the service details in the *Metrics* tab:
 .. Select a *Security Protocol* method to specify how to authenticate the service:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
 * *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
@@ -50,7 +50,7 @@ In OpenShift, the default deployment of the router generates certificates during
 .. Enter the *Hostname* (or IPv4 or IPv6 address) of the provider, or use the *Detect* button to find the hostname.
 .. Enter the *API Port* if your Hawkular provider uses a non-standard port for access. The default port is `443`.
 .. Click *Validate* to confirm that {product-title} can connect to the metrics endpoint.
-. If you selected the *Prometheus* alerts service, add the Prometheus alerts endpoint in the *Alerts* tab:
+. For the *Prometheus* alerts service, add the Prometheus alerts endpoint in the *Alerts* tab:
 .. Select a *Security Protocol* method to specify how to authenticate the service:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
 * *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
