--- a/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
@@ -83,7 +83,9 @@ Alerts triggered before assigning the profiles to the enterprise will not appear
 
 ==== Adding an OpenShift Containers Provider with a Prometheus Alert Endpoint
 
-You will now add an OpenShift Containers Provider with a Prometheus Alert Endpoint using the {product-title_short} user interface; see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_providers/#adding_openshift_provider[Adding an OpenShift Container Platform Provider]. 
+Complete the following procedure to add an OpenShift Containers Provider with a Prometheus Alert Endpoint using the {product-title_short} user interface.
+
+include::common/provider-ocp-add-container.adoc[] 
 
 Once you have completed the procedure, you will have OpenShift Prometheus alerts enabled in {product-title_short}, and can manage their life cyle from the menu:Monitor[Alerts] screen in the user interface.
 
