api v3.0.0 - Creating providers now requires credentials or connection_configurations.

--- a/api/appendices/resource_attributes.adoc
+++ b/api/appendices/resource_attributes.adoc
@@ -387,6 +387,7 @@ POST /api/providers
 | name | string | Name of the provider
 | type | string | Provider class
 | hostname | string | Hostname of the Provider
+| credentials or connection_configurations | hash or array | Credentials information for the provider either via the *credentials* hash or *connection_configurations* array
 |=====================
 
 ==== Optional attributes:
