--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -34,7 +34,7 @@ Add/Update/Delete custom attribute for cloud instances https://github.com/Manage
 Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
-require credentials when creating a provider https://github.com/ManageIQ/manageiq-api/pull/16
+Creating Providers require credentials,
 CRUD for Generic Object Definitions,
 CRUD for Generic Objects,
 VMs Subcollection for Providers,
